cmake_minimum_required(VERSION 3.21)
project(Systems_Programming_Introduction C)

set(CMAKE_C_STANDARD 99)

add_executable(Systems_Programming_Introduction HW1.c Lab02.c Lab03.c HW2.c
        Lab04.c Lab05.c HW3.c Lab06.c HW4/TestHist.c HW4/LinkedList.c HW4/Set.c HW4/Hist.c HW4/main.c Lab07/main.c
        Lab07/Student.c Lab07/Student.h Lab08/Vector.c Lab08/Vector.h Lab08/main.c Lab09/Stack.c Lab09/main.c HW5/dump_hex.c Lab10/lab10.c HW5/compress8to7.c HW5/uncompress8to7.c HW5/tester.c testPractice/generalCExr.c)
