cmake_minimum_required(VERSION 3.21)
project(Systems_Programming_Introduction C)

set(CMAKE_C_STANDARD 99)

add_executable(Systems_Programming_Introduction HW1.c Lab02.c Lab03.c HW2.c
        Lab04.c Lab05.c HW3.c Lab06.c HW4/TestHist.c HW4/LinkedList.c HW4/Set.c HW4/Hist.c HW4/main.c Lab07/main.c
        Lab07/Student.c Lab07/Student.h Lab08/Vector.c Lab08/Vector.h Lab08/main.c Lab09/Stack.c Lab09/main.c HW5/dump_hex.c Lab10/lab10.c HW5/compress8to7.c HW5/uncompress8to7.c HW5/tester.c testPractice/1/generalCExr.c testPractice/1/MusicLib.c testPractice/1/MusicLib.h testPractice/1/main.c testPractice/1/BitOperations.c testPractice/2/generalPractice.c testPractice/2/Queue.c testPractice/2/Queue.h testPractice/2/main.c testPractice/2/BitwiseOperations.c testPractice/3/Ex1.c testPractice/3/BitwiseOperations.c testPractice/4/Ex1.c testPractice/4/Multiset.c testPractice/4/Multiset.h testPractice/4/MultisetMain.c testPractice/4/Ex3.c)
